# cmpstd

./: .clang-format  CMakeLists.txt  Dockerfile  LICENSE  README.md
cmpstd/service/: CMakeLists.txt  service.cpp  service.h
cmpstd/tools/: CMakeLists.txt  tools.cpp  tools.h
modular/: CMakeLists.txt
modular/cmpstd/: CMakeLists.txt  hello.cpp
modular/cmpstd/service/: CMakeLists.txt  service.cpp  service.h
modular/cmpstd/tools/: CMakeLists.txt  tools.cpp  tools.h
modular/run/: CMakeLists.txt  cmpstd_server.cpp
run/: CMakeLists.txt  print_hello.cpp
simple/: CMakeLists.txt  Dockerfile  service.cc
simple/proto/: cmpstd.proto
